[package]
name = "ula"
version = "0.0.1"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
repository = "https://github.com/dotcypress/ula"
description = "μLA: Micro Logic Analyzer for RP2040"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
cortex-m-rtic = "1.1.3"
defmt = "=0.3.2"
defmt-rtt = "0.4.0"
panic-halt = "0.2.0"
rp2040-hal = { version = "0.8", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
pio = "0.2.1"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
usb-device = "0.2.9"
cortex-m = "0.7.7"
panic-probe = "0.3.1"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 2
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
